# clf_perception_vision

./: .gitignore  CMakeLists.txt  README.md  clf_perception_depth_lookup.xml  clf_perception_gender_age.xml  clf_perception_nodelets.xml  clf_perception_vision_depth_lookup.xml  clf_perception_vision_gender_age.xml  package.xml
data/: automatica.yaml  example.yaml  example_orb.yaml  example_surf.yaml  robocup_drinks.yaml
data/configs/: clf_perception_cmt_example.yaml  clf_perception_gender_age_example.yaml  clf_perception_surb_example.yaml  dlib_face.yaml  dlib_face_pepper.yaml  example_surf.yaml  face_id.yaml  face_id_pepper.yaml  geniale_objects.yaml  kinect-color-vga.xml  kinect-depth-vga.xml  pepper_movegroup.yaml  robocup_drinks.yaml  segmentation_config.xml
data/gender/: fisher_gender.xml  training_gender_label.csv
data/haar/: haarcascade_upperbody.xml
data/ros_cam/: ros_cam.launch
deprecated_legacy_code/: README.md
deprecated_legacy_code/cmt/: CMT.cpp  Continuity.cpp  main.cpp
deprecated_legacy_code/include/: CMT.h  Continuity.h  clf_2d_body.hpp  clf_2d_people.hpp  clf_perception_depth_lookup_objects.hpp  common.h  gui.h  rsb_grabber.hpp
deprecated_legacy_code/launch/: clf_perception_face.launch
deprecated_legacy_code/src/: caffee_classification.cpp  clf_2d_cv_dlib_people.cpp  clf_2d_faceprocessing.cpp  clf_2d_faces.cpp  clf_2d_people.cpp  clf_2d_train_gender_fisher.cpp  clf_perception_depth_lookup_nodelet.cpp  clf_perception_depth_lookup_objects.cpp  clf_perception_gender_age_main.cpp  clf_perception_gender_age_nodelet.cpp  main_dlib_faces_once.cpp  rsb_grabber.cpp
include/: caffee_classification.h  clf_2_caffee_classification.h  clf_2d_caffee_classification.h  clf_2d_cv_dlib_people.hpp  clf_2d_detect.hpp  clf_2d_dlib_faces.hpp  clf_2d_face_processing.h  clf_2d_gender.hpp  clf_2d_people.hpp  clf_perception_depth_lookup.hpp  clf_perception_depth_lookup_objects.hpp  clf_perception_depth_lookup_persons.hpp  clf_perception_interactive_surb.hpp  clf_perception_surb.hpp  dlib_detection.hpp  main.hpp  native_grabber.hpp  ros_grabber.hpp  rsb_grabber.hpp
launch/: clf_perception_cmt_tracker.launch  clf_perception_face.launch  clf_perception_gender_age.launch  clf_perception_interactive_surb.launch  clf_perception_objects_pipeline.launch  clf_perception_people_pipeline.launch  clf_perception_surb.launch  darknet_ros.launch
msg/: CMTrackerResults.msg  ExtendedObjects.msg  ExtendedObjectsStamped.msg  ExtendedPeople.msg  ExtendedPersonStamped.msg
python/: clf_perception_box2people.py
src/: clf_2d_body.cpp  clf_2d_caffee_classification.cpp  clf_2d_collect.cpp  clf_2d_cv_dlib.cpp  clf_2d_cv_dlib_people.cpp  clf_2d_detect.cpp  clf_2d_detect_surb.cpp  clf_2d_dlib_faces.cpp  clf_2d_faceprocessing.cpp  clf_2d_faces.cpp  clf_2d_gender.cpp  clf_2d_gender_fisher.cpp  clf_2d_people.cpp  clf_2d_train_gender_fisher.cpp  clf_perception_collect_data.cpp  clf_perception_depth_lookup.cpp  clf_perception_depth_lookup_nodelet.cpp  clf_perception_depth_lookup_objects.cpp  clf_perception_depth_lookup_persons.cpp  clf_perception_faces.cpp  clf_perception_gender_age_main.cpp  clf_perception_gender_age_nodelet.cpp  clf_perception_gender_depth_lookup_nodelet.cpp  clf_perception_interactive_surb.cpp  clf_perception_interactive_surb_main.cpp  clf_perception_surb.cpp  clf_perception_surb_main.cpp  dlib_detection.cpp  main.cpp  main_dlib_faces.cpp  main_surb.cpp  native_grabber.cpp  ros_grabber.cpp
src/cmt/: CMT.cpp  Consensus.cpp  Continuity.cpp  main.cpp
src/cmt/include/: CMT.h  Continuity.h  common.h
src/python/: clf_perception_box2objects.py  clf_perception_box2people.py  clf_perception_people2map.py  clf_perception_vision_send_gender_age.py  clf_perception_vision_send_isurf.py
srv/: CMTObjectTrack.srv  CMTStopObjectTrack.srv  DoIKnowThatPerson.srv  LearnPerson.srv
tools/: clf_2d_collect
tools/python/: create_csv.py  crop.py  crop_and_align_folder.py  crop_and_align_ms_dataset.py
